# hello-again-phasefield

./: .gitignore  CMakeLists.txt  README.md
1d_diff_explicit/: Diff1DExplicit.c  Diff1DExplicit.h  Diff1DExplicit.out  Makefile  profile.txt  write_to_VTK.c
diffusion_eqn_explicit/: write_to_VTK.c
spinodal/: Makefile  array_allocate.c  array_deallocate.c  free_energy.c  laplacian.c  prep_microstructure.c  rand_ZeroToOne.c  set_array_zero.c  solve.c  solve2.c  spinodal.c  spinodal.h  write_to_VTK.c
spinodal/notes/: README.md  initialise_func_error_v1b.c  initialise_func_error_v3.c  memset.c  set_array_zero.h
spinodal_binary_elasticity/: rand_ZeroToOne.c  spinodal_elasticity.c  write_init_conc.c  write_to_VTK.c  write_var_to_VTK.c
spinodal_binary_fdm/: array_allocate.c  free_energy.c  rand_ZeroToOne.c  write_to_VTK.c
spinodal_binary_fdm/notes/: initialise_func_error_v0.c  initialise_func_error_v1a.c  initialise_func_error_v2.c
spinodal_binary_spectral/: write_init_conc.c  write_to_VTK.c
spinodal_elasticity/: elasticity_derivative.c  green_tensor.c  prep_fft.c  prep_microstructure.c  spinodal_elasticity.c  spinodal_elasticity.h  write_init_conc.c  write_var_to_VTK.c
spinodal_spect/: Makefile  array_allocate.c  array_deallocate.c  array_fft_allocate.c  prep_microstructure.c  rand_ZeroToOne.c  spinodal_spect.c  spinodal_spect.h  write_to_VTK.c
spinodal_ternary/: array_deallocate.c  ternary_coarsening.c  write_to_VTK.c
spinodal_ternary/notes/: inputs_constants  notes.md
spinodal_ternary_spectral/: array_allocate.c  prep_microstructure.c  rand_ZeroToOne.c  ternary_coarsening.h
